crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_a_a_equals_gt_gen_4.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<a a =>\"####)"
---
[
    Token {
        data: "a",
        attrs: Some(
            {
                "a": None,
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
